--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
             <version>4.4.16</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.12.0</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
