--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 # 应用服务 WEB 访问端口
 server.port=8080
-
+spring.datasource.druid.primary.url=jdbc:mysql://127.0.0.1:3306/medicalplatform?useSSL=false&serverTimezone=GMT%2b8&useUnicode=true&characterEncoding=utf-8&transformedBitIsBoolean=true&autoReconnect=true
+spring.datasource.druid.primary.username=root
+spring.datasource.druid.primary.password=root
+# ????????????100MB
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
