很多错误  准备重构shiro

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.datasource.druid.primary.password=root
 # ????????????100MB
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+medical:
+  jwt:
+# ??jwt??????????
+    admin-secret-key: itcast
+# ??jwt????
+    admin-ttl: 7200000
+# ?????????????
+    admin-token-name: token
